# web-note

./: .gitignore
code/agent/: pyproject.toml
code/agent/01_helloworld/: LangChainV0.3.py  LangChainV1.0.py  LangChain_MoreV1.0.py
code/agent/02_modelio/: ModelIO_ChatOpenAI.py  ModelIO_DeepSeek.py  ModelIO_Init_chat_model.py  ModelIO_Ollama.py  ModelIO_OpenAI.py  ModelIO_Qwen.py
code/agent/03_prompt/chat_prompt_template/: ChatPromptTemplate_Constructor.py  ChatPromptTemplate_FormatMessages.py
code/agent/03_prompt/invoke/: LLM_Invoke.py  LLM_Stream.py  LLM_aInvoke.py  LLM_aStream.py
code/agent/03_prompt/load_external/: prompt.json
code/agent/04_Parser/: StrOutputParserDemo.py  StructuredOutput_Pydantic.py  StructuredOutput_TypedDict.py
code/agent/05_LCEL链式调用/: LCEL_RunnableBranchDemo.py  LCEL_RunnableParallelDemo.py  LCEL_RunnableSequenceDemo.py  LCEL_RunnableSerializableDemo.py
code/agent/07_tools/: QueryWeatherTool.py  Tool_AddNumberTool.py  Tool_AddNumberToolPro.py
code/agent/08_embedding/: Text2Embedding_DashScope.py  Text2Embedding_DashScopeHello.py  Text2Embedding_DashScopePro.py
code/agent/09_rag/: RedisVectorStore.py
code/agent/09_rag/docloads/: RagLoadCSVDemo.py  RagLoadMarkdownDemo.py
code/agent/09_rag/textsplit/: RecursiveTextSplitter.py
code/agent/10_mcp/: McpClient.py  McpServer.py
code/agent/11_agent/: Agent2Agent.py  AgentReact.py
code/agent/LangChain/01_helloworld/: StandardDesc.py
code/agent/LangChain/02_modelio/: ModelIO_Params.py  ModelIO_ZhiPuAI.py
code/agent/LangChain/04_Parser/: AnnotatedPydantic.py  AnnotatedTypedDict.py  JsonOutputParserDemo.py  JsonOutputParser_GetFormatInstructions.py
code/agent/LangChain/05_LCEL链式调用/: LCEL_RunnableLambdaDemo.py
code/agent/LangChain/06_memory/: Memory_IDontKnow.py  Memory_InMemoryChatMessageHistory.py  (+3 more)
(+643 files in other folders)
