[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.17",
    "docx2txt>=0.9",
    "grandalf>=0.8",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "jq>=1.11.0",
    "langchain>=1.2.15",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.15",
    "langchain-redis>=0.2.5",
    "langchain-unstructured>=1.0.1",
    "langchainhub>=0.1.21",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "loguru>=0.7.3",
    "mcp>=1.27.1",
    "openai>=2.32.0",
    "pyjwt>=2.12.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-magic-bin>=0.4.14",
    "pywin32>=311",
    "redis==5.3.1",
    "regex==2026.4.4",
    "unstructured[docx,md]>=0.22.27",
]
